Fix page jumps
The page currently jumps to the top whenever the menu buttons are clicked, remove href so that the user doesn't lose their place.

--- a/style/style.css
+++ b/style/style.css
@@ -145,7 +145,6 @@ body {
 .menu-panel {
     position: absolute;
     background-color: #a78a7f;
-    top: 0;
     right: -500px;
     width: 500px;
     height: 100%;
